# fl-studio-mcp

./: .gitignore  Makefile  README.md  channel-docs.md  device_FLStudioMCPController.py  device_flstudiomcp.py  fl-api-stubs-mypy-commands.md  main.py  mypy.ini  pyproject.toml  run_flstudio_mcp.sh
FLStudioMCP/: device_FLStudioMCP.py
fl_mcp_server/: __init__.py  server.py
fl_studio_controller/: __init__.py  device_FLStudioMCPController.py  device_fl.py  device_flstudiocontroller.py  device_test.py
fl_studio_controller/commands/: channel_commands.py  mixer_commands.py  transport_commands.py  visual_commands.py
fl_studio_controller/testing/: test_suite.py
fl_studio_controller/utils/: __init__.py
flstudio_mcp_iac/: server.py
old/: device_FLStudioMCPController.py
old/fl_studio_controller/: __init__.py
old/fl_studio_controller/commands/: __init__.py
old/fl_studio_controller/testing/: __init__.py  test_suite.py
old/flstudio_mcp_iac/: server.py
server/: command_map.py  feedback_handler.py  midi_bridge.py
shared/: protocols.py
