[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fl_mcp_server"
version = "0.1.0"
description = "MCP Server for FL Studio Integration"
readme = "README.md"
requires-python = ">=3.9" # Specify a reasonable minimum Python version
license = {text = "MIT License"} # Or choose appropriate license
authors = [
  {name = "Your Name", email = "your.email@example.com"}, # CHANGE THIS
]
dependencies = [
    "mcp >= 1.3.0",
]

[project.urls]
Homepage = "https://github.com/lewisgoing/fl-studio-mcp" # CHANGE THIS
Repository = "https://github.com/lewisgoing/fl-studio-mcp" # CHANGE THIS

# Optional: Define a console script entry point
# This allows running `fl-mcp-server` after installation
[project.scripts]
fl-mcp-server = "fl_mcp_server.server:main"

[tool.setuptools]
# Include the package directory
packages = ["fl_mcp_server"]